# Gerador-de-cracha

./: .gitignore  pyproject.toml
fastapi/: gerador.py  main.py
front-end/: dados.php  error.php  impressao.php  index.php  srx.js
tests/: test_gerar.py
